# nerve-wml

./: .gitignore  .ruff.toml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
bridge/: checkpoint.py  eps_replay.py  kiki_nerve_advisor.py  merge_trainer.py  query_encoder.py  sim_nerve_adapter.py
docs/: ARXIV_SUBMISSION.md  positioning.md
docs/changelog/: v1.4.0.md
docs/integration/: micro-kiki-wiring.md
docs/research-notes/: dvnc-baseline-protocol.md  n3-gate-role.md  sleep-edf-pipeline-protocol.md
harness/: run_registry.py
interpret/: code_semantics.py  visualise.py
nerve_core/: __init__.py  protocols.py
nerve_wml/methodology/: __init__.py  bootstrap_ci_mi.py  mi_null_model.py
neuromorphic/: export.py  spike_encoder.py  verify.py
papers/paper1/: Makefile  main.tex  refs.bib
scripts/: ablation_n3_guard.py  ablation_n3_predictive.py  aggregate_matched_sweep.py  baseline_dvnc.py  eeg_preprocess_sleep_edf.py  freeze_golden.py  measure_cka_vs_mi.py  measure_info_transmission.py  measure_mi_bootstrap_ci.py  measure_mi_null_model.py  render_bigger_arch_figure.py  render_info_tx_figure.py  render_mnist_figure.py  render_paper_figures.py  render_scaling_figure.py  render_temporal_figure.py  run_bigger_arch.py  run_mnist_pilots.py  run_temporal_pilots.py  save_codes_eeg.py  save_codes_for_checks.py  track_p_pilot.py  track_w_pilot.py
tests/: __init__.py
tests/golden/: codes_mlp_lif.npz  test_golden_regressions.py
tests/integration/: test_adaptive_multi_cycle.py  test_advisor_latency.py  test_gate_p.py  test_gate_p3.py  test_p1_dead_vs_steps.py
tests/unit/: test_adaptive_shrink_grow.py  test_bootstrap_ci_mi.py  test_checkpoint.py  test_clustering.py  test_code_semantics.py  test_eps_replay.py  test_kiki_nerve_advisor.py  test_lif_wml.py  test_mi_null_model.py  test_mnist_task.py  test_mock_nerve.py  test_multiplexer.py  test_multiplexer_plasticity.py  test_neuromorphic_export.py  test_oscillators.py  test_paper_scaling_section.py  test_paper_v2_body.py  test_paper_v3_integrations.py  test_pool_factory.py  test_pool_factory_cfg.py  test_protocols.py  test_pyproject_axioms_extras.py  test_query_encoder.py  test_readme_gates.py  test_render_figure3.py  test_router.py  (+16 more)
track_p/: __init__.py  multiplexer.py  oscillators.py  router.py  sim_nerve.py  transducer.py
track_w/: lif_wml.py  mlp_wml.py  mock_nerve.py  pool_factory.py  spectrogram.py  streaming_hooks.py  training.py  transformer_wml.py
(+31 files in other folders)
