[project]
name = "nerve-wml"
version = "0.1.0"
description = "Substrate-agnostic nerve protocol for inter-WML communication"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Clément Saillant" }]
dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nerve_core", "track_p"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
