[project]
name = "nerve-wml"
version = "1.5.3"
description = "Substrate-agnostic nerve protocol for inter-WML communication"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Clément Saillant" }]
dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
  "scipy>=1.17.1",
  "mne>=1.12.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
mnist = [
    "torchvision>=0.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nerve_core", "track_p", "track_w", "bridge", "harness", "interpret", "neuromorphic", "nerve_wml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
